[tool.poetry]
name = "swedeb-explorer"
version = "0.1.0"
description = "Swedish parliamentary debate explorer"
authors = ["roger-mahler <roger.mahler@hotmail.com>"]
readme = "README.md"
packages = [{include = "swedeb_explorer"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
